# wenqu

./: .env.example  .gitignore  API.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  migrate_embeddings.py  pyproject.toml  requirements.txt  run_tests.py  server.py  start-server.bat
core/: chunker.py  config.py  embed.py  llm.py  logging.py  parser.py  rag.py  retrieve.py  routes.py  server_utils.py  storage.py  vector_store.py
docs/: ollama_guide.txt  使用说明.md
docs/课件/: WX0ia-1773625330799-第1章+测试技术基础知识.ppt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/Chat/: ChatArea.jsx  ChatInput.jsx  ElapsedTime.jsx  EmptyChat.jsx  MessageActions.jsx  MessageContent.jsx  MessageItem.jsx  MessageList.jsx  MessageSources.jsx  ScrollToBottomBtn.jsx  SearchHistoryDropdown.jsx
frontend/src/components/Modals/: ChunkItem.jsx  ChunkModal.jsx  ChunkToolbar.jsx  DocModal.jsx  Modal.jsx
frontend/src/components/Sidebar/: ConversationItem.jsx  ConversationList.jsx  DocItem.jsx  DocSection.jsx  ExportButton.jsx  FontSizeControl.jsx  SearchPanel.jsx  SettingsModal.jsx  SettingsPanel.jsx  Sidebar.jsx  SidebarHeader.jsx  (+1 more)
frontend/src/context/: ConversationContext.jsx  ThemeContext.jsx  ToastContext.jsx
frontend/src/hooks/: useAutoResize.js  useDragDrop.js  useKeyboard.js
frontend/src/utils/: grouping.js  markdown.js
scripts/: pre-push.sh  setup-hooks.sh
static/: index.html
tests/: test_concurrent.py  test_core.py
tools/: backup.py  eval_kb.py  update.py
(+2 files in other folders)
